<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_scrn_bg">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:text="@string/guest"
                android:id="@+id/guest"
                android:textSize="11sp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/guest_btn"
                android:layout_alignParentRight="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/guest"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo"
                    android:id="@+id/loaderImg"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:id="@+id/findtxt"
                    android:textSize="22sp"
                    android:text="FIND"/>
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                        android:layout_marginLeft="5dp"
                    android:id="@+id/dealstxt"
                    android:textSize="22sp"
                    android:text=" DEALS"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:paddingRight="25dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@drawable/loginbg"
                    android:layout_height="300dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/loginscreen_username_edittext_height"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittextbg"
                        android:hint="@string/Username"
                        android:drawableLeft="@drawable/user"
                        android:paddingLeft="12dp"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:drawablePadding="20dp"
                        android:textColorHint="@color/white"
                        android:id="@+id/user_name_editText"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/loginscreen_username_edittext_height"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittextbg"
                        android:hint="@string/Password"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/password"
                        android:paddingLeft="12dp"
                        android:drawablePadding="20dp"
                        android:textColorHint="@color/white"
                        android:id="@+id/password_editText"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/loginscreen_username_edittext_height"
                        android:id="@+id/login_btn"
                        android:textColor="@color/white"
                        android:background="@drawable/login_btn"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:text="@string/Login"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forgottxt"
                        android:text="@string/ForgotPassword"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/loginscreen_username_edittext_height"
                        android:id="@+id/fblogin"
                        android:text="@string/LoginwithFacebook"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textAllCaps="false"
                        android:background="@drawable/fb_btn"
                        android:layout_marginTop="10dp"/>


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/loginscreen_username_edittext_height"
                        android:id="@+id/gplogin"
                        android:textSize="13sp"
                        android:text="@string/Loginwithgoogle"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:background="@drawable/gp_bg"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OR"
                    android:id="@+id/ortxt"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loginscreen_username_edittext_height"
                    android:id="@+id/signup"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/login_btn"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:text="@string/SignUp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
