<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.digit_25.finaldeal.EditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:paddingTop="15dp"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="@dimen/back_icn_width"
            android:layout_height="@dimen/back_icn_height"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            android:layout_marginRight="6dp"
            android:background="@drawable/arrow"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:id="@+id/backicn" />

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yourlocation"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/back"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:id="@+id/profilepiclayout"
        android:layout_height="wrap_content">

        <utils.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/profilepic"
            android:src="@drawable/profile_pic"/>

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jitender"
            android:id="@+id/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Norway OSLO"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/location"
            android:id="@+id/description"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userlayout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:layout_below="@+id/profilepiclayout"
        android:orientation="vertical">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/firstname"
            android:drawableLeft="@drawable/user"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:textSize="@dimen/editscren_txtsize"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/fname"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/lastname"
            android:drawableLeft="@drawable/user"
            android:textSize="@dimen/editscren_txtsize"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/lname"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/Username"
            android:textSize="@dimen/editscren_txtsize"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/username"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/phone"
            android:drawableLeft="@drawable/phone"
            android:textSize="@dimen/editscren_txtsize"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/phone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"
            android:textSize="@dimen/editscren_txtsize"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginscreen_username_edittext_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:textSize="@dimen/editscren_txtsize"
            android:paddingLeft="@dimen/editscren_padding_left_edittxt"
            android:drawablePadding="20dp"
            android:textColorHint="@color/white"
            android:id="@+id/password"/>

        <utils.RegularText
            android:layout_width="match_parent"
            android:layout_height="@dimen/singup_screen_register_height"
            android:id="@+id/signup"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="@drawable/button_bg"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/Save"/>
    </LinearLayout>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
