<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <utils.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile_pic"
        />

    <utils.RegularText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="D' Mall"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/backicn"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_btn"/>

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oslo Norway"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightred"/>

    <utils.RegularText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/WRITEREVIEWS"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <utils.RegularText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ratings"
        android:layout_gravity="center"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/WriteReview_edittext"
        android:inputType="textMultiLine"
        android:hint="@string/WriteReviews"
        android:textSize="14sp"
        android:gravity="top|left"
        android:maxLines="10"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white" />

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_margin="7dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/editor"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/Cancel"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:background="@color/toolbar_color"
            android:layout_weight="1"/>

        <utils.RegularText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:text="@string/Submit"
            android:background="@color/toolbar_color"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>